# simple_router_verification

./: .gitignore  Cargo.toml  router
.cargo/: config
src/: main.rs
