[package]
name = "simple_router_proof"
version = "0.1.0"
authors = ["Benedikt Radtke <benediktradtke@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scfia-lib = { path="../scfia-lib" }
log = "0.4"
env_logger = "0.8"
